changed the color to fit the theme

--- a/src/app.css
+++ b/src/app.css
@@ -38,7 +38,7 @@ p {
 }
 
 .cards{
-  background-color: aqua;
+  background-color:rgb(104 11 29);
   text-align: center;
   margin:auto;
   border-radius: 5%;
