added new css to fix the cards

--- a/src/app.css
+++ b/src/app.css
@@ -17,14 +17,17 @@ a {
 
 h2 {
   text-align: center;
+  padding-top: 2rem;
   font-size: 2.5rem;
 }
 
 img {
   display: flex;
   margin: auto;
+  margin-top: 2rem;
   overflow: hidden;
-  max-width: 45ch;
+  max-width:40ch;
+  border-radius: 2rem;
 }
 
 p {
