--- a/src/app.css
+++ b/src/app.css
@@ -9,7 +9,7 @@ ul {
 
 a {
   text-decoration: none;
-  color: black;
+  color: rgb(255, 255, 255);
   max-width: fit-content;
   position: sticky;
   
@@ -19,6 +19,7 @@ h2 {
   text-align: center;
   padding-top: 2rem;
   font-size: 2.5rem;
+  color: white;
 }
 
 img {
@@ -28,10 +29,11 @@ img {
   overflow: hidden;
   max-width:40ch;
   border-radius: 2rem;
+
 }
 
 p {
-  color: #000;
+  color: #ffffff;
   display: block;
   text-decoration: none;
   text-align:center;
@@ -56,13 +58,6 @@ p {
   background-color: #000;
 }
 
-.cards:hover p {
-  color: aliceblue;
-}
-
-.cards:hover h2 {
-  color:aliceblue
-}
 
 .title {
   padding-bottom: 2rem;
